[gd_scene load_steps=8 format=2]

[ext_resource path="res://DrumCat.gd" type="Script" id=1]
[ext_resource path="res://images/drum_cat/drum_01.png" type="Texture" id=2]
[ext_resource path="res://images/drum_cat/drum_02.png" type="Texture" id=3]
[ext_resource path="res://sounds/bongo_roll.wav" type="AudioStream" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 25.0
} ]

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 29.26, -53.62, 127.15, 26.4, 112.93, 96.41, -39.4, 106, -52.53, 44.74, -83.84, 51.23, -68.81, -15.68 )

[sub_resource type="Animation" id=3]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="DrumCat" type="RigidBody2D"]
position = Vector2( 238.227, 230.471 )
collision_mask = 0
gravity_scale = 0.0
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 0.2, 0.2 )
shape = SubResource( 4 )

[node name="Visibility" type="VisibilityNotifier2D" parent="."]
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/turn_to_dust = SubResource( 3 )

[node name="DrumRoll" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
[connection signal="screen_exited" from="Visibility" to="." method="_on_Visibility_screen_exited"]
[connection signal="finished" from="DrumRoll" to="." method="_on_DrumRoll_finished"]
